// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> should display image if one is provided 1`] = `
<div
  className="src__StyledFieldset-dd88ty-0 hslrOs"
>
  <span
    className="src__StyledLabelText-sc-12l0n4z-0 bhgkMV"
  >
    Does this test pass?
  </span>
  <span
    className="src__StyledError-q8g4f0-0 bdKiGy"
  >
    Select an option
  </span>
  <div>
    <label
      className="src__Label-sc-7h7h1q-0 feKpmi"
    >
      <input
        checked={false}
        className="src__Input-sc-7h7h1q-1 inkjiG"
        type="radio"
        value="yes"
      />
      <span
        className="src__LabelText-sc-7h7h1q-2 eikDAg"
      >
        Yes
      </span>
    </label>
  </div>
  <div>
    <label
      className="src__Label-sc-7h7h1q-0 feKpmi"
    >
      <input
        checked={false}
        className="src__Input-sc-7h7h1q-1 inkjiG"
        type="radio"
        value="no"
      />
      <span
        className="src__LabelText-sc-7h7h1q-2 eikDAg"
      >
        No
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> should match the default snapshot 1`] = `
<div
  className="src__StyledFieldset-dd88ty-0 jXpWQg"
>
  <span
    className="src__StyledLabelText-sc-12l0n4z-0 bhgkMV"
  >
    Does this test pass?
  </span>
  <div>
    <label
      className="src__Label-sc-7h7h1q-0 feKpmi"
    >
      <input
        checked={false}
        className="src__Input-sc-7h7h1q-1 inkjiG"
        type="radio"
        value="yes"
      />
      <span
        className="src__LabelText-sc-7h7h1q-2 eikDAg"
      >
        Yes
      </span>
    </label>
  </div>
  <div>
    <label
      className="src__Label-sc-7h7h1q-0 feKpmi"
    >
      <input
        checked={false}
        className="src__Input-sc-7h7h1q-1 inkjiG"
        type="radio"
        value="no"
      />
      <span
        className="src__LabelText-sc-7h7h1q-2 eikDAg"
      >
        No
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> should match the with hint text snapshot 1`] = `
<div
  className="src__StyledFieldset-dd88ty-0 jXpWQg"
>
  <span
    className="src__StyledLabelText-sc-12l0n4z-0 bhgkMV"
  >
    Does this test pass?
  </span>
  <span
    className="src__StyledHint-sc-1qn4br2-0 iazGYO"
  >
    Supporting text to help
  </span>
  <div>
    <label
      className="src__Label-sc-7h7h1q-0 feKpmi"
    >
      <input
        checked={false}
        className="src__Input-sc-7h7h1q-1 inkjiG"
        type="radio"
        value="yes"
      />
      <span
        className="src__LabelText-sc-7h7h1q-2 eikDAg"
      >
        Yes
      </span>
    </label>
  </div>
  <div>
    <label
      className="src__Label-sc-7h7h1q-0 feKpmi"
    >
      <input
        checked={false}
        className="src__Input-sc-7h7h1q-1 inkjiG"
        type="radio"
        value="no"
      />
      <span
        className="src__LabelText-sc-7h7h1q-2 eikDAg"
      >
        No
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> should match the with meta and error snapshot 1`] = `
<div
  className="src__StyledFieldset-dd88ty-0 hslrOs"
>
  <span
    className="src__StyledLabelText-sc-12l0n4z-0 bhgkMV"
  >
    Does this test pass?
  </span>
  <span
    className="src__StyledError-q8g4f0-0 bdKiGy"
  >
    Select an option
  </span>
  <div>
    <label
      className="src__Label-sc-7h7h1q-0 feKpmi"
    >
      <input
        checked={false}
        className="src__Input-sc-7h7h1q-1 inkjiG"
        type="radio"
        value="yes"
      />
      <span
        className="src__LabelText-sc-7h7h1q-2 eikDAg"
      >
        Yes
      </span>
    </label>
  </div>
  <div>
    <label
      className="src__Label-sc-7h7h1q-0 feKpmi"
    >
      <input
        checked={false}
        className="src__Input-sc-7h7h1q-1 inkjiG"
        type="radio"
        value="no"
      />
      <span
        className="src__LabelText-sc-7h7h1q-2 eikDAg"
      >
        No
      </span>
    </label>
  </div>
</div>
`;
